--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
+
+ <!--  밑에서 dispatcher가 welcome-file의 역할을 수행할 수 있기 때문이다.
   <display-name>ServletJspProgramming</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
@@ -9,4 +11,45 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+    -->
+    
+  <servlet>
+  	<servlet-name>dispatcher</servlet-name>
+  	<servlet-class>company.web.servlet.DispatcherServlet01</servlet-class>
+  	<init-param>
+  		<param-name>x</param-name>
+  		<param-value>10</param-value>  		
+  		<!-- 이렇게 설정한 값을 초기화 하여 배정하는 것이다. --> 
+  	</init-param>
+  	<init-param>
+  		<param-name>y</param-name>
+  		<param-value>200</param-value>
+  	</init-param>
+  	<load-on-startup>1</load-on-startup>
+  	<!-- deploy 하자마자 우선순위로 객체를 미리 만드는 과정이다. -->
+  	<!-- 단 load-on-startup은 init 밑에 위치해 있어야 한다. -->
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>dispatcher</servlet-name>
+  	<url-pattern>/</url-pattern>
+  	<!-- / 자체가 context root이기 때문에 처음 웹서버가 실행되면 dispatcher가실행된다. -->
+  </servlet-mapping>
+  
+  
+  <servlet>
+  	<servlet-name>dispatcher02</servlet-name>
+  	<servlet-class>company.web.servlet.DispatcherServlet02</servlet-class>
+  	<init-param>
+  		<param-name>contextConfigLocation</param-name>
+  		<!-- contextConfigLocation 자체가 공통적으로 사용되는
+  			설정파일이다. Spring framework에서 자동적으로 사용되는 요소임을 기억하라.
+  			즉 contextConfigLocation와 Dispatcher의 철자에 유의하라 -->
+  		<param-value>/WEB-INF/servletContext.xml</param-value>
+  	</init-param>
+  	<load-on-startup>1</load-on-startup>
+  </servlet>
+  <servlet-mapping>
+  	<servlet-name>dispatcher02</servlet-name>
+  	<url-pattern>/dispatcher02</url-pattern>
+  </servlet-mapping>
 </web-app>
